--- a/index.html
+++ b/index.html
@@ -1,114 +1,164 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js">
-	</script>
-	<title>SRH Head and Neck Emergency Radiology course</title>
-	<!-- this is to make the link look nice when shared, e.g. WhatsApp, Facebook -->
-	<meta property="og:site_name" content="SRH Head and Neck Emergency Radiology course">
-	<meta property="og:title" content="SRH Head and Neck Emergency Radiology course" />
-	<meta property="og:description" content="A One day course aimed at Consultants and Trainees in ENT and Radiology to learn to interptet imaging in ENT emergencies " />
-	<meta property="og:image" itemprop="image" content="http://srhradiologycourse.com/assets/img/smallsquarelogo.jpg">
-	<meta property="og:url" content="http://srhradiologycourse.com/" />
-	<meta property="og:type" content="website" />
-	<meta property="og:updated_time" content="1497688886" />
-	<!-- end of open graph elements -->
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+  <title>Parallax Template - Materialize</title>
+
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-	<div class="section grey darken-3"><!-- banner at top -->
-		<div class = "container">
-			<div class="row">
-				<div class="col s12">
-					<h1 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h1>
-					<h4 class="pink-text text-pink accent-3 center-on-small-only">Sunderland</h4>
-				</div>
-			</div>
-		</div>
-	</div>
-	<br>
-	<br>
-<body>
-	<div class="section transparent"><!-- banner at top -->
-		<div class = "container">
-			<div class="row">
-				<div class="col s12">
-					<h6 class="header green-text text-green darken-1 center-on-small-only">A one day course aimed at Consultants and Trainees in ENT and Radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
-				</div>
-			</div>
-		</div>
-	</div>
-	<br>
-	<div class = "container">
-		<div class = "row">
-			<div class = "col m6 s12">
-				<div class = "center">
-					<i class = "blue-text material-icons">record_voice_over</i>
-				</div>
-				<h6>Programme</h6>
- 				<p class = "light">
-					0800-0845 Registration<br>
- 					0845-0900 Welcome and Introductions<br>
- 					0900-0945 ENT emergencies - A Clinical perspective<br>
- 					0945-1030 Pharyngeal emergencies<br>
- 					1030-1100 Coffee<br>
- 					1100-1145 Temporal bone emergencies<br>
- 					1145-1230 Nasal and paranasal emergencies<br>
- 					1230-1330 Lunch<br>
- 					1330-1400 Facial trauma<br>
- 					1400-1430 Dental and salivary emergencies<br>
- 					1430-1500 Neurological complications of ENT emergencies<br>
- 					1500-1530 Coffee<br>
- 					1530-1600 Vascular Emergencies<br>
-  					1600-1700 Cases and Panel discussion
-				</p>
-			</div>
+  <nav class="white" role="navigation">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Navbar Link</a></li>
+      </ul>
 
-			<div class = "col m3 s12">
-				<div class = "center">
-					<i class = "blue-text material-icons">today</i>
-				</div>
-				<h6>Tuesday 26th Sept 2017</h6>
-				<p class = "light">
-					<i class = "tiny material-icons left">schedule</i>0800 - 1700<br>
-					<i class = "tiny material-icons left">room</i><a href = "https://goo.gl/maps/Viaoh4mJ2RT2">Education Center, Sunderland Royal Hospital, Kayll Road, SR4 7TP</a><br>
-					<i class = "tiny material-icons left">email</i><a href = "mailto:SRHRadiologycourse@gmail.com">Email</a><br>
-				</p>
-			</div>
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="#">Navbar Link</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
 
-			<div class = "col m3 s12">
-				<div class = "center">
-					<i class = "blue-text material-icons">recent_actors</i>
-				</div>
-				<h6>Faculty</h6>
-				<p class = "light">
-					Miss H Cocks, Dr Y Mentias, Dr I Zammit, Dr J Dixon, Dr A Abdel-Galil, Dr G Bunea, Dr S England, Mr T Bradish
-				</p>
-			</div>
-			<br>
-			<br>
-			<div class = "col m6 s12 blue lighten-5"><br>
-				<div class = "center">
-					<i class = "blue-text material-icons">info_outline</i>
-				</div>
-				<p class = "light ">
-					Course fee is £50 per person<br>
-					Lunch and refreshments are included<br>
-					This course is aimed CT1 to consultant in ENT and Radiology<br>
-					Attendance provides 6 CPD credits in accordance with the CPD schemes of ENTUK and the Royal College of Radiologists<br>
-					Please complete and return the application form below to attend this course</p>
-			</div>
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        </div>
+        <div class="row center">
+          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+        </div>
+        <br><br>
 
-		</div>
-	</div>
-	<div class = "row center">
-		<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Poster</a>
-		<div class = "hide-on-med-and-up clearfix">&nbsp;</div>	
-		<a class="waves-effect waves-light btn" href = "/assets/Application form Sept 2017.doc"><i class="material-icons left">description</i>Application form</a>
-	</div>
-	<br>
-	<br>
-</body>
+      </div>
+    </div>
+    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+  </div>
+
+
+  <div class="container">
+    <div class="section">
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
+            <h5 class="center">Speeds up development</h5>
+
+            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">User Experience Focused</h5>
+
+            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Easy to work with</h5>
+
+            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+  </div>
+
+  <div class="container">
+    <div class="section">
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h4>Contact Us</h4>
+          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+  </div>
+
+  <footer class="page-footer teal">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Company Bio</h5>
+          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+
+
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Settings</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Link 2</a></li>
+            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Link 2</a></li>
+            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      </div>
+    </div>
+  </footer>
+
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+
+  </body>
 </html>
