--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
 	<!-- end of open graph elements -->
 </head>
 <body>
-	<div class="section grey darken-3"><!-- banner at top -->
-		<div class = "container">
-			<div class="row">
-				<div class="col s12">
-					<h1 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h1>
-					<h4 class="pink-text text-pink accent-3 center-on-small-only">Sunderland</h4>
+	  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        </div>
+        <br><br>
+
+      </div>
+    </div>
+    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+  </div>
 				</div>
 			</div>
 		</div>
