--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="http://srhradiologycourse.com/assets/slide1.jpg" alt="http://srhradiologycourse.com/assets/slide1.jpg"></div>
   </div>
 				</div>
 			</div>
