--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+        <h1 class="header center teal-text text-lighten-2">Emergency Head and Neck Radiology course</h1>
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Sunderland</h5>
         </div>
         <br><br>
 
@@ -120,3 +120,4 @@
 	<br>
 </body>
 </html>
+e
