--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 	<!-- end of open graph elements -->
 </head>
 <body>
+	body {
+  background-color: #000;
+  background-image: url(thttp://srhradiologycourse.com/assets/slide1.jpg), url(http://srhradiologycourse.com/assets/slide1.jpg);
+  background-position: center center, center top;
+  background-repeat: repeat, no-repeat;
+}
 	  <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
