--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 	body {
   background-color: #000;
-  background-image: url(thttp://srhradiologycourse.com/assets/slide1.jpg), url(http://srhradiologycourse.com/assets/slide1.jpg);
+  background-image: url(http://srhradiologycourse.com/assets/slide1.jpg), url(http://srhradiologycourse.com/assets/slide1.jpg);
   background-position: center center, center top;
   background-repeat: repeat, no-repeat;
 }
