--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- this is to make the link look nice when shared, e.g. WhatsApp, Facebook -->
 	<meta property="og:site_name" content="SRH Head and Neck Emergency Radiology course">
 	<meta property="og:title" content="SRH Head and Neck Emergency Radiology course" />
-	<meta property="og:description" content="A One day course for Consultants and trainees in ENT and Radiology to learn to interptet imaging " />
+	<meta property="og:description" content="A One day course aimed at Consultants and Trainees in ENT and Radiology to learn to interptet imaging in ENT emergencies " />
 	<meta property="og:image" itemprop="image" content="http://srhradiologycourse.com/assets/img/smallsquarelogo.jpg">
 	<meta property="og:url" content="http://srhradiologycourse.com/" />
 	<meta property="og:type" content="website" />
@@ -22,8 +22,8 @@
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
-					<h1 class="header cyan-text text-cyan accent-3 center-on-small-only">Sunderland</h1>
-					<h4 class="pink-text text-pink accent-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
+					<h1 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h1>
+					<h4 class="pink-text text-pink accent-3 center-on-small-only">Sunderland</h4>
 				</div>
 			</div>
 		</div>
@@ -35,15 +35,21 @@
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
-					<h1 class="header green-text text-green darken-1 center-on-small-only">Sunderland</h1>
+					<h6 class="header green-text text-green darken-1 center-on-small-only">A one day course aimed at Consultants and Trainees in ENT and Radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br>
 	<div class = "container">
 		<div class = "row">
 			<div class = "col m6 s12">
 				<div class = "center">
-					<i class = "blue-text material-icons">camera_roll</i>
+					<i class = "blue-text material-icons">record_voice_over</i>
 				</div>
-				<h6>A one day course for Consultants and trainees in ENT and radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
- 				<p class = "light">0800-0845 Registration<br>
+				<h6>Programme</h6>
+ 				<p class = "light">
+					0800-0845 Registration<br>
  					0845-0900 Welcome and Introductions<br>
  					0900-0945 ENT emergencies - A Clinical perspective<br>
  					0945-1030 Pharyngeal emergencies<br>
@@ -56,7 +62,8 @@
  					1430-1500 Neurological complications of ENT emergencies<br>
  					1500-1530 Coffee<br>
  					1530-1600 Vascular Emergencies<br>
-  					1600-1700 Cases and Panel discussion</p>
+  					1600-1700 Cases and Panel discussion
+				</p>
 			</div>
 
 			<div class = "col m3 s12">
@@ -96,9 +103,10 @@
 
 		</div>
 	</div>
-	<div class = "center">
-		<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Download poster</a>
-		<a class="waves-effect waves-light btn" href = "/assets/Application form Sept 2017.doc"><i class="material-icons left">description</i>Download Application form</a>
+	<div class = "row center">
+		<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Poster</a>
+		<div class = "hide-on-med-and-up clearfix">&nbsp;</div>	
+		<a class="waves-effect waves-light btn" href = "/assets/Application form Sept 2017.doc"><i class="material-icons left">description</i>Application form</a>
 	</div>
 	<br>
 	<br>
