--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	<!-- end of open graph elements -->
 </head>
 <body>
-	<div class="section img src="http://srhradiologycourse.com/assets/img/slide1.jpg" alt="http://srhradiologycourse.com/assets/img/slide1.jpg"</div>"><!-- banner at top -->
+	<div id="banner"><img src="http://srhradiologycourse.com/assets/img/slide1.jpg"
+width="759" height="120" alt="banner" /><!-- banner at top -->
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
