--- a/index.html
+++ b/index.html
@@ -85,7 +85,14 @@ width="759" height="120" alt="banner" /><!-- banner at top -->
 				</div>
 				<h6>Faculty</h6>
 				<p class = "light">
-					Miss H Cocks, Dr Y Mentias, Dr I Zammit, Dr J Dixon, Dr A Abdel-Galil, Dr G Bunea, Dr S England, Mr T Bradish
+					Miss H Cocks<br>
+					Dr Y Mentias<br>
+					Dr I Zammit<br>
+					Dr J Dixon<br>
+					Dr A Abdel-Galil<br>
+					Dr G Bunea<br>
+					Dr S England<br>
+					Mr T Bradish
 				</p>
 			</div>
 			<br>
