--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- end of open graph elements -->
 </head>
 <body>
-	background-image:url("http://srhradiologycourse.com/assets/img/smallsquarelogo.jpg")
+	background-image:url"http://srhradiologycourse.com/assets/img/smallsquarelogo.jpg"
 	<div id="banner"><img src="http://srhradiologycourse.com/assets/img/slide1.jpg"
 width="759" height="120" alt="banner" /><!-- banner at top -->
 		<div class = "container">
