--- a/index.html
+++ b/index.html
@@ -16,23 +16,26 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:updated_time" content="1497688886" />
 	<!-- end of open graph elements -->
+	
+	<style>
+.image-background {
+    background-image: url("/assets/img/slide1.jpg");
+    background-repeat: no-repeat;
+}
+	</style>
 </head>
 <body>
-	<div id="banner"><img src="http://srhradiologycourse.com/assets/img/slide1.jpg"
-width="759" height="120" alt="banner" /><!-- banner at top -->
-		<div class = "container">
-			<div class="row">
-				<div class="col s12">
-					<h1 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h1>
-					<h4 class="pink-text text-pink accent-3 center-on-small-only">Sunderland</h4>
-				</div>
+	<div class = "container">
+		<div class="row">
+			<div class="col s12 image-background">
+				<h1 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h1>
+				<h4 class="pink-text text-pink accent-3 center-on-small-only">Sunderland</h4>
 			</div>
 		</div>
 	</div>
 	<br>
 	<br>
-<body>
-	<div class="section transparent"><!-- banner at top -->
+	<div class="section transparent">
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
