--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	
 	<style>
 		.image-background {
-			background-image: url("/assets/img/slide1.jpg");
+			background-image: url("/assets/img/Slide1.jpg");
 			background-repeat: no-repeat;
 		}
 	</style>
