--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		.image-background {
 			background-image: url("/assets/img/Slide1.jpg");
 			background-repeat: no-repeat;
+			background-size:100%;
 		}
 	</style>
 </head>
