--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@
 			background-size:100%;
 		}
 	</style>
+	
+	<script type = "application/javascript">
+		$(document).ready(function(){
+			$('.parallax').parallax();
+		});
+	</script>
+	
 </head>
 <body>
+	  <div class="parallax-container">
+    		<div class="parallax"><img src="/assets/img/Slide1.jpg"></div>
+  	</div>
 	<div class="row">
 		<div class="col s12 image-background">
 			<h2 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h2>
