--- a/index.html
+++ b/index.html
@@ -16,16 +16,7 @@
 	<meta property="og:url" content="http://srhradiologycourse.com/" />
 	<meta property="og:type" content="website" />
 	<meta property="og:updated_time" content="1497688886" />
-	<!-- end of open graph elements -->
-	
-	<style>
-		.image-background {
-			background-image: url("/assets/img/Slide1.jpg");
-			background-repeat: no-repeat;
-			background-size:100%;
-		}
-	</style>
-	
+	<!-- end of open graph elements -->	
 	<script type = "application/javascript">
 		$(document).ready(function(){
 			$('.parallax').parallax();
@@ -38,7 +29,7 @@
     		<div class="parallax"><img src="/assets/img/Slide1.jpg"></div>
   	</div>
 	<div class="row">
-		<div class="col s12 image-background">
+		<div class="col s12 transparent">
 			<h2 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h2>
 			<h4 class="pink-text text-pink accent-3 center-on-small-only">Sunderland</h4>
 		</div>
