--- a/index.html
+++ b/index.html
@@ -22,16 +22,25 @@
 			$('.parallax').parallax();
 		});
 	</script>
+	 <style>
+ 		.image-background {
+ 			background-image: url("/assets/img/Slide1.jpg");
+ 			background-repeat: no-repeat;
+ 			background-size:100%;
+ 		}
+ 	</style>
 	
 </head>
 <body>
 	  <div class="parallax-container">
-    		<div class="parallax"><img src="/assets/img/Slide1.jpg"></div>
+    		<div class="parallax image-background">
+		  <h2 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h2>
+		  <h4 class="pink-text text-pink accent-3 center-on-small-only">Sunderland</h4>
+		</div>
   	</div>
 	<div class="row">
 		<div class="col s12 transparent">
-			<h2 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h2>
-			<h4 class="pink-text text-pink accent-3 center-on-small-only">Sunderland</h4>
+
 		</div>
 	</div>
 	<br>
