--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
 		});
 	</script>
 	 <style>
- 		.image-background {
- 			background-image: url("/assets/img/Slide1.jpg");
- 			background-repeat: no-repeat;
- 			background-size:100%;
+ 		.constrained {
+ 			height:100px;
  		}
  	</style>
 	
 </head>
 <body>
-	  <div class="parallax-container">
-		<h2 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h2>
-		<h4 class="pink-text text-pink accent-3 center-on-small-only">Sunderland</h4>
+	  <div class="parallax-container constrained">
+		  <div class = "container">
+			<h2 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h2>
+			<h4 class="pink-text text-pink accent-3 center-on-small-only">Sunderland</h4>
+		</div>
     		<div class="parallax">
 			<img src = "/assets/img/Slide1.jpg">
 		</div>
