--- a/index.html
+++ b/index.html
@@ -26,19 +26,31 @@
  		.constrained {
  			height:300px;
  		}
+		.logo-img {
+			width:300px;
+		}
  	</style>
 	
 </head>
 <body>
-	  <div class="parallax-container constrained">
-		  <div class = "container">
-			<h4 class="pink-text text-pink accent-3 center-on-small-only">Sunderland</h4>
-			<h3 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h2>
+	<div class="parallax-container constrained">
+		<div class="section no-pad-bot">
+			<div class="container">
+				<div class="row">
+					<div class = "col s9">
+						<h4 class="pink-text text-pink accent-3 center-on-small-only">Sunderland</h4>
+						<h3 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h3>
+					</div>
+					<div class = "col s3">
+						<img src = "/assets/img/chs.png" class = "image-responsize right-align">
+						<img src = "/assets/img/rcr.png" class = "image-responsize right-align">
+						<img src = "/assets/img/entuk.png" class = "image-responsize right-align">
+					</div>
+				</div>
+			</div>
 		</div>
-    		<div class="parallax">
-			<img src = "/assets/img/Slide1.jpg">
-		</div>
-  	</div>
+		<div class="parallax"><img src="/assets/img/Slide1.jpg"></div>
+	</div>
 	<div class="row">
 		<div class="col s12 transparent">
 
