--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 						<h3 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h3>
 					</div>
 					<div class = "col s3">
-						<img src = "/assets/img/chs.png" class = "image-responsize right-align">
-						<img src = "/assets/img/rcr.png" class = "image-responsize right-align">
-						<img src = "/assets/img/entuk.png" class = "image-responsize right-align">
+						<img src = "/assets/img/chs.png" class = "image-responsive right-align">
+						<img src = "/assets/img/rcr.png" class = "image-responsive right-align">
+						<img src = "/assets/img/entuk.png" class = "image-responsive right-align">
 					</div>
 				</div>
 			</div>
