--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  			height:300px;
  		}
 		.constrained-img {
-		 	max-height:100px
+		 	height:100px
 		}
  	</style>
 	
@@ -41,9 +41,9 @@
 					<h3 class="header cyan-text text-cyan accent-3 center-on-small-only">Head and Neck Emergency Radiology Course</h3>
 				</div>
 				<div class = "col s2">
-					<img src = "/assets/img/chs.png" class = "responsive-img constrained-img right-align">
-					<img src = "/assets/img/rcr.png" class = "responsive-img constrained-img right-align">
-					<img src = "/assets/img/entuk.png" class = "responsive-img constrained-img right-align">
+					<img src = "/assets/img/chs.png" class = "constrained-img right-align">
+					<img src = "/assets/img/rcr.png" class = "constrained-img right-align">
+					<img src = "/assets/img/entuk.png" class = "constrained-img right-align">
 				</div>
 			</div>
 		</div>
