--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	
 </head>
 <body>
-	<div class="parallax-container constrained">
+	<div class="parallax-container constrained-banner">
 		<div class="section no-pad-bot">
 			<div class="row">
 				<div class = "col s10">
