--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="parallax"><img src="/assets/img/Slide1.jpg"></div>
+		<div class="parallax"><img src="/assets/img/mri.jpg"></div>
 	</div>
 	<div class="row">
 		<div class="col s12 transparent">
