--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 		$(document).ready(function(){
 			$('.parallax').parallax();
 		});
-	</script>	
+	</script>
+	<style>
+ 		.constrained-banner {
+ 			height:280px;
+ 		}
+ 	</style>
 </head>
 <body>
 	<div class="parallax-container constrained-banner">
