--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					Course fee is £50 per person<br>
 					Lunch and refreshments are included<br>
 					This course is aimed CT1 to consultant in ENT and Radiology<br>
-					Attendance provides 6 CPD credits in accordance with the CPD scheme of the Royal College of Radiologists<br>
+					Attendance provides 6 CPD credits in accordance with the CPD schemes of ENTUK and the Royal College of Radiologists<br>
 					Please complete and return the application form below to attend this course</p>
 			</div>
 
