--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
  					1330-1400 Facial trauma<br>
  					1400-1430 Dental and salivary emergencies<br>
  					1430-1500 Neurological complications of ENT emergencies<br>
- 					1500-1530 Coffee<br>
- 					1530-1600 Vascular Emergencies<br>
-  					1600-1700 Cases and Panel discussion
+ 					1500-1515 Quiz<br>
+					1515-1545 Coffee
+ 					1545-1645 Cases and Panel discussion<br>
+  					1645-1700 Quiz results and prizes 
 				</p>
 			</div>
 
