--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
  					1400-1430 Dental and salivary emergencies<br>
  					1430-1500 Neurological complications of ENT emergencies<br>
  					1500-1515 Quiz<br>
-					1515-1545 Coffee
+					1515-1545 Coffee<br>
  					1545-1645 Cases and Panel discussion<br>
   					1645-1700 Quiz results and prizes 
 				</p>
